Poprawka zapisu do bazy danych w sekcji raportów